--- a/templates/ogn-token.html
+++ b/templates/ogn-token.html
@@ -110,8 +110,7 @@ endwith %}
       </div>-->
       <div class="d-flex flex-md-row flex-column justify-content-center button-holder">
         <div class='text-center'>
-          <a class='dark-button'
-            href="/dashboard">{{gettext("View the OGN Dashboard")}}</a>
+          <a class="dark-button" href="{{ url_for('dashboard', lang_code=CURRENT_LANGUAGE) }}">{{gettext("View the OGN Dashboard")}}</a>
         </div>
         <div class='text-center'>
           <a target="_blank" rel="noopener noreferrer" class='dark-button'
