--- a/static/css/pages/dashboard.css
+++ b/static/css/pages/dashboard.css
@@ -286,6 +286,10 @@
   .dashboard-page h3 {
     text-align: center;
   }
+
+  .additional-token-metrics h3 {
+    text-align: left;
+  }
 } 
 
 @media (max-width: 1200px) {
