--- a/templates/product.html
+++ b/templates/product.html
@@ -324,7 +324,7 @@
                 <span>{{gettext("Launched Dshop")}}</span>
               </div>
             </div>
-            <div class="milestone completed recent">
+            <div class="milestone completed">
               <div class="step">10</div>
               <div class="timestamp">{{gettext("Q1 2020")}}</div>
               <div class="title">
@@ -334,30 +334,36 @@
                   <span>{{gettext("Added to Samsung Blockchain Wallet")}}</span>
               </div>
             </div>
-            <div class="milestone future">
+            <div class="milestone completed">
               <div class="step">11</div>
               <div class="timestamp">{{gettext("Q2 2020")}}</div>
               <div class="title">
                 <span>{{gettext("Listed on additional exchanges")}}</span>
-                <span>{{gettext("Support Dshop partner launches")}}</span>
-                <span>{{gettext("Launch OGN staking model")}}</span>
+                <span>{{gettext("Supported Dshop partner launches")}}</span>
               </div>
             </div>
-            <div class="milestone future">
+            <div class="milestone completed">
               <div class="step">12</div>
               <div class="timestamp">{{gettext("Q3 2020")}}</div>
               <div class="title">
-                  <span>{{gettext("Launch new developer tools and expand developer adoption")}}</span>
-                  <span>{{gettext("Expand Dshop partnerships and store types")}}</span>
+                  <span>{{gettext("Partnered with Brave, Google Cloud, and others")}}</span>
               </div>
             </div>
-            <!--<div class="milestone future">
+            <div class="milestone completed">
               <div class="step">13</div>
               <div class="timestamp">{{gettext("Q4 2020")}}</div>
               <div class="title">
-                {{gettext("Launch OGN as a governance token")}}
+                <span>{{gettext("Launched OUSD")}}</span>
+                <span>{{gettext("Launched OGN staking model")}}</span>
               </div>
-            </div>-->
+            </div>
+            <div class="milestone future">
+              <div class="step">14</div>
+              <div class="timestamp">{{gettext("Q1 2021 and beyond")}}</div>
+              <div class="title">
+                <span>{{gettext("Continued development of the Origin platform & community")}}</span>
+              </div>
+            </div>
           </div>
         </div>
       </div>
