--- a/templates/whitepaper/roadmap.html
+++ b/templates/whitepaper/roadmap.html
@@ -2,113 +2,108 @@
   <h1>{{gettext("Roadmap & milestones")}}</h1>
 
   <div class="milestones-timeline">
-    <div class="milestone completed">
-      <div class="step">1</div>
-      <div class="timestamp">{{gettext("May 2017")}}</div>
-      <div class="title">{{gettext("Began initial development")}}</div>
-    </div>
-    <div class="milestone completed">
-      <div class="step">2</div>
-      <div class="timestamp">{{gettext("September 2017")}}</div>
-      <div class="title">{{gettext("Released initial whitepaper")}}</div>
-    </div>
-    <div class="milestone completed">
-      <div class="step">3</div>
-      <div class="timestamp">{{gettext("November 2017")}}</div>
-      <div class="title">{{gettext("Raised $3M of funding (Advisor Round)")}}</div>
-    </div>
-    <div class="milestone completed">
-      <div class="step">4</div>
-      <div class="timestamp">{{gettext("December 2017")}}</div>
-      <div class="title">{{gettext("Launched Alpha on Ethereum testnet")}}</div>
-    </div>
-    <div class="milestone completed">
-      <div class="step">5</div>
-      <div class="timestamp">{{gettext("April 2018")}}</div>
-      <div class="title">{{gettext("Raised $28.5M of funding (Strategic Round)")}}</div>
-    </div>
-    <div class="milestone completed">
-      <div class="step">6</div>
-      <div class="timestamp">{{gettext("August 2018")}}</div>
-      <div class="title">{{gettext("Raised $6.6M of funding (CoinList Round)")}}</div>
-    </div>
-    <div class="milestone completed">
-      <div class="step">7</div>
-      <div class="timestamp">{{gettext("October 2018")}}</div>
-      <div class="title">{{gettext("Launched Beta on Ethereum mainnet")}}</div>
-    </div>
-    <div class="milestone completed">
-      <div class="step">8</div>
-      <div class="timestamp">{{gettext("February 2019")}}</div>
-      <div class="title">
-        <span>{{gettext("Launched Marketplace Creator 1.0 and our first mobile apps")}}</span>
-        <span>{{gettext("Supported first partner app launches")}}</span>
+    
+    <div class="milestones-timeline">
+      <div class="milestone completed">
+        <div class="step">1</div>
+        <div class="timestamp">{{gettext("May 2017")}}</div>
+        <div class="title">{{gettext("Began initial development")}}</div>
+      </div>
+      <div class="milestone completed">
+        <div class="step">2</div>
+        <div class="timestamp">{{gettext("September 2017")}}</div>
+        <div class="title">{{gettext("Released initial whitepaper")}}</div>
+      </div>
+      <div class="milestone completed">
+        <div class="step">3</div>
+        <div class="timestamp">{{gettext("December 2017")}}</div>
+        <div class="title">{{gettext("Launched Alpha on Ethereum testnet")}}</div>
+      </div>
+      <div class="milestone completed">
+        <div class="step">4</div>
+        <div class="timestamp">{{gettext("October 2018")}}</div>
+        <div class="title">{{gettext("Launched Beta on Ethereum mainnet")}}</div>
+      </div>
+      <div class="milestone completed">
+        <div class="step">5</div>
+        <div class="timestamp">{{gettext("February 2019")}}</div>
+        <div class="title">
+          <span>{{gettext("Launched Marketplace Creator 1.0 and our first mobile apps")}}</span>
+          <span>{{gettext("Supported first partner app launches")}}</span>
+        </div>
+      </div>
+      <div class="milestone completed">
+        <div class="step">6</div>
+        <div class="timestamp">{{gettext("April 2019")}}</div>
+        <div class="title">
+          <span>{{gettext("Launched Origin Rewards")}}</span>
+          <span>{{gettext("Launched stablecoin payments")}}</span>
+        </div>
+      </div>
+      <div class="milestone completed">
+        <div class="step">7</div>
+        <div class="timestamp">{{gettext("July 2019")}}</div>
+        <div class="title">
+          <span>{{gettext("Launched shoporigin.com and new mobile apps")}}</span>
+          <span>{{gettext("Launched Meta Transactions")}}</span>
+        </div>
+      </div>
+      <div class="milestone completed">
+        <div class="step">8</div>
+        <div class="timestamp">{{gettext("September 2019")}}</div>
+        <div class="title">
+          <span>{{gettext("Launched OGN Commissions")}}</span>
+        </div>
+      </div>
+      <div class="milestone completed">
+        <div class="step">9</div>
+        <div class="timestamp">{{gettext("Q4 2019")}}</div>
+        <div class="title">
+          <span>{{gettext("Distributed investor OGN tokens")}}</span>
+          <span>{{gettext("Launched Dshop")}}</span>
+        </div>
+      </div>
+      <div class="milestone completed">
+        <div class="step">10</div>
+        <div class="timestamp">{{gettext("Q1 2020")}}</div>
+        <div class="title">
+            <span>{{gettext("Launched Mainnet 1.0")}}</span>
+            <span>{{gettext("Listed on Binance")}}</span>
+            <span>{{gettext("Launched OGN as payment token")}}</span>
+            <span>{{gettext("Added to Samsung Blockchain Wallet")}}</span>
+        </div>
+      </div>
+      <div class="milestone completed">
+        <div class="step">11</div>
+        <div class="timestamp">{{gettext("Q2 2020")}}</div>
+        <div class="title">
+          <span>{{gettext("Listed on additional exchanges")}}</span>
+          <span>{{gettext("Supported Dshop partner launches")}}</span>
+        </div>
+      </div>
+      <div class="milestone completed">
+        <div class="step">12</div>
+        <div class="timestamp">{{gettext("Q3 2020")}}</div>
+        <div class="title">
+            <span>{{gettext("Partnered with Brave, Google Cloud, and others")}}</span>
+        </div>
+      </div>
+      <div class="milestone completed">
+        <div class="step">13</div>
+        <div class="timestamp">{{gettext("Q4 2020")}}</div>
+        <div class="title">
+          <span>{{gettext("Launched OUSD")}}</span>
+          <span>{{gettext("Launched OGN staking model")}}</span>
+        </div>
+      </div>
+      <div class="milestone future">
+        <div class="step">14</div>
+        <div class="timestamp">{{gettext("Q1 2021 and beyond")}}</div>
+        <div class="title">
+          <span>{{gettext("Continued development of the Origin platform & community")}}</span>
+        </div>
       </div>
     </div>
-    <div class="milestone completed">
-      <div class="step">9</div>
-      <div class="timestamp">{{gettext("April 2019")}}</div>
-      <div class="title">
-        <span>{{gettext("Launched Origin Rewards")}}</span>
-        <span>{{gettext("Launched stablecoin payments")}}</span>
-      </div>
-    </div>
-    <div class="milestone completed">
-      <div class="step">10</div>
-      <div class="timestamp">{{gettext("July 2019")}}</div>
-      <div class="title">
-        <span>{{gettext("Launched shoporigin.com and new mobile apps")}}</span>
-        <span>{{gettext("Launched Meta Transactions")}}</span>
-      </div>
-    </div>
-    <div class="milestone completed">
-      <div class="step">11</div>
-      <div class="timestamp">{{gettext("September 2019")}}</div>
-      <div class="title">
-        <span>{{gettext("Launched upgraded meta-transactions infrastructure")}}</span>
-        <span>{{gettext("Launched gift card and video streaming marketplace apps")}}</span>
-      </div>
-    </div>
-    <div class="milestone completed">
-      <div class="step">12</div>
-      <div class="timestamp">{{gettext("November 2019")}}</div>
-      <div class="title">
-        <span>{{gettext("Launched Origin Commissions")}}</span>
-        <span>{{gettext("Launched decentralized e-commerce store platform")}}</span>
-        <span>{{gettext("Launched off-chain payments")}}</span>
-      </div>
-    </div>
-    <div class="milestone completed">
-      <div class="step">13</div>
-      <div class="timestamp">{{gettext("Q1 2020")}}</div>
-      <div class="title">
-        <span>{{gettext("Launched Mainnet 1.0")}}</span>
-        <span>{{gettext("Launched OGN as payment token")}}</span>
-        <span>{{gettext("Listed OGN on Binance")}}</span>
-      </div>
-    </div>
-    <div class="milestone completed recent">
-      <div class="step">14</div>
-      <div class="timestamp">{{gettext("Q2 2020")}}</div>
-      <div class="title">
-        <span>{{gettext("Launch additional marketplace and e-commerce apps")}}</span>
-        <span>{{gettext("Support partner launches of decentralized e-commerce stores")}}</span>
-        <span>{{gettext("Launch OGN staking model")}}</span>
-      </div>
-    </div>
-    <div class="milestone future">
-      <div class="step">15</div>
-      <div class="timestamp">{{gettext("Q3 2020")}}</div>
-      <div class="title">
-        <span>{{gettext("Launch new developer tools and expand developer adoption")}}</span>
-      </div>
-    </div>
-    <div class="milestone future">
-      <div class="step">16</div>
-      <div class="timestamp">{{gettext("Q4 2020")}}</div>
-      <div class="title">
-        {{gettext("Launch OGN as a governance token")}}
-      </div>
-    </div>
+
   </div>
 </div>
