--- a/templates/product.html
+++ b/templates/product.html
@@ -359,7 +359,7 @@
             </div>
             <div class="milestone future">
               <div class="step">14</div>
-              <div class="timestamp">{{gettext("Q1 2021 and beyond")}}</div>
+              <div class="timestamp">{{gettext("2021 and beyond")}}</div>
               <div class="title">
                 <span>{{gettext("Continued development of the Origin platform & community")}}</span>
               </div>
