--- a/templates/whitepaper/roadmap.html
+++ b/templates/whitepaper/roadmap.html
@@ -1,4 +1,4 @@
-<div id="roadmap">
+s<div id="roadmap">
   <h1>{{gettext("Roadmap & milestones")}}</h1>
 
   <div class="milestones-timeline">
@@ -98,7 +98,7 @@
       </div>
       <div class="milestone future">
         <div class="step">14</div>
-        <div class="timestamp">{{gettext("Q1 2021 and beyond")}}</div>
+        <div class="timestamp">{{gettext("2021 and beyond")}}</div>
         <div class="title">
           <span>{{gettext("Continued development of the Origin platform & community")}}</span>
         </div>
