add dshop links to product page

--- a/static/css/pages/dshop.css
+++ b/static/css/pages/dshop.css
@@ -397,6 +397,10 @@ html {
   margin: 0 1.5rem;
 }
 
+.dshop .customer-logos .origin-logo {
+  height: 30px;
+}
+
 .dshop .customer-logos .brave-logo {
   height: 41px;
 }
