--- a/templates/dshop.html
+++ b/templates/dshop.html
@@ -169,6 +169,10 @@
         {{gettext("Meet the companies who are choosing Dshop to build and grow their decentralized online stores")}}
       </div>
       <div class="customer-logos">
+        <a href="https://store.originprotocol.com" target="_blank" rel="noopener noreferrer">
+          <img src="/static/img/origin-logo-dark.png" srcset="/static/img/origin-logo-dark@2x.png 2x,
+          /static/img/origin-logo-dark@3x.png 3x" class="origin-logo">
+        </a>
         <a href="https://store.brave.com" target="_blank" rel="noopener noreferrer">
           <img src="/static/img/dshop/brave-logo.svg" class="brave-logo">
         </a>
