--- a/templates/product.html
+++ b/templates/product.html
@@ -47,14 +47,22 @@
       </div>
     </div>
 
-    <a
-      href="{{ url_for('dshop', lang_code=CURRENT_LANGUAGE) }}"
-      class="btn btn-primary d-flex align-items-center justify-content-center">
-      {{gettext("Learn More")}}
-    </a>
+    <div class="d-flex">
+      <a
+        href="{{ url_for('dshop', lang_code=CURRENT_LANGUAGE) }}"
+        class="btn btn-primary d-flex align-items-center justify-content-center mr-2">
+        {{gettext("Try Dshop")}}
+      </a>
+      <a
+        href="https://store.originprotocol.com"
+        class="btn btn-primary d-flex align-items-center justify-content-center ml-2">
+        {{gettext("Visit Origin Store")}}
+      </a>
+    </div>
     <img class="dshop-image" src="/static/img/product/dshop-screenshots.png" srcset="/static/img/product/dshop-screenshots@2x.png 2x, /static/img/product/dshop-screenshots@3x.png 3x" />
     <div class="sub-title mt-5">{{gettext("Online stores created with Dshop")}}</div>
     <div class="bottom d-flex justify-content-center align-items-center flex-wrap mt-3 mt-md-0">
+      <a href="https://store.originprotocol.com/" target="_blank" rel="noopener noreferrer"><img class="swag mt-4 mt-md-3" src="/static/img/origin-logo-dark.png"/></a>
       <a href="https://store.brave.com/" target="_blank" rel="noopener noreferrer"><img class="swag mt-4 mt-md-3" src="/static/img/product/brave-logo-color-rgb.svg"/></a>
       <a href="https://kyber.ogn.app/" target="_blank" rel="noopener noreferrer"><img class="swag mt-4 mt-md-3" src="/static/img/product/kyber-network.svg"/></a>
       <a href="https://store.solana.com/" target="_blank" rel="noopener noreferrer"><img class="swag mt-4 mt-md-3" src="/static/img/product/solana.png" srcset="/static/img/product/solana@2x.png 2x, /static/img/product/solana@3x.png 3x"/></a>
