--- a/templates/team.html
+++ b/templates/team.html
@@ -129,7 +129,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   </a>
                 </div>
                 <div class="title">
-                  {{ gettext("Product Manager/Engineer") }}
+                  {{ gettext("Director of Product") }}
                 </div>
                 <div class="bio">
                   {{ gettext("Micah was the technical co-founder of
@@ -172,7 +172,7 @@ tech companies") }}{% endblock %} {% block content %} {% with theme_dark=True %}
                   </a>
                 </div>
                 <div class="title">
-                  {{ gettext("Senior Engineer") }}
+                  {{ gettext("VP of Engineering") }}
                 </div>
                 <div class="bio">
                   {{ gettext("Franck has had a successful career as an early
