Update titles in whitepaper

--- a/templates/whitepaper/team.html
+++ b/templates/whitepaper/team.html
@@ -128,7 +128,7 @@
             </a>
           </div>
           <div class="title">
-            {{ gettext("Senior Engineer") }}
+            {{ gettext("VP of Engineering") }}
           </div>
           <div class="bio text-center">
             {{ gettext("Franck has had a successful career as an early employee
@@ -170,7 +170,7 @@
             </a>
           </div>
           <div class="title">
-            {{ gettext("Product Manager/Engineer") }}
+            {{ gettext("Director of Product") }}
           </div>
           <div class="bio text-center">
             {{ gettext("Micah was the technical co-founder of WellAttended, a
